@@ -26,6 +26,7 @@ Bugs fixed:
 - 2762848 pam/sfcb reduced logging in syslog
 - 2538227 Daemon clients are not unloading providers (localclient)
 - 2771516 Duplicate extern in indCIMXMLHandler.c
+- 2771819 Some ClXXX functions in objectImpl assume "data" is not NULL
 
 Changes in 1.3.3
 ================
